--- a/public/resources/assets/sass/app.css
+++ b/public/resources/assets/sass/app.css
@@ -1,3 +1,43 @@
+@font-face {
+  font-family: 'DINNext';
+  src: url("/fonts/DINNextLTPro-HeavyCondensed.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'AaronFaces';
+  src: url("/fonts/aaron-webfont.woff");
+}
+
+@font-face {
+  font-family: 'CircularStd';
+  src: url("/fonts/CircularStd-Book.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'CircularStd';
+  src: url("/fonts/CircularStd-BookIalic.otf");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'CircularStd';
+  src: url("/fonts/CircularStd-Bold.otf");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'CircularStd';
+  src: url("/fonts/CircularStd-BoldItalic.otf");
+  font-weight: bold;
+  font-style: italic;
+}
+
 .white-border {
   border-color: #FFF !important;
 }
@@ -19,7 +59,7 @@
 }
 
 .font-primary-color {
-  color: #51DBB0;
+  color: #60F569;
 }
 
 .font-red {
@@ -31,11 +71,11 @@
 }
 
 .font-light-gray {
-  color: #B6B9BD;
+  color: #BCBDC9;
 }
 
 .font-lighter-gray {
-  color: #EAEAEB;
+  color: #E5E5F0;
 }
 
 .font-white {
@@ -51,15 +91,19 @@
 }
 
 .font-purple {
-  color: #7D64D1;
+  color: #6677CC;
 }
 
 .font-alternate-color {
-  color: #60ffcd;
+  color: #89ff90;
+}
+
+.back-color-white {
+  background-color: #FFF;
 }
 
 .back-color-dark {
-  background-color: #1F1D26;
+  background-color: #272A38;
 }
 
 .back-color-red {
@@ -67,19 +111,19 @@
 }
 
 .back-color-purple {
-  background-color: #7D64D1;
+  background-color: #6677CC;
 }
 
 .back-color-darkgray {
-  background-color: #2B2B2A;
+  background-color: #1E1F24;
 }
 
 .back-color-lightgray {
-  background-color: #B6B9BD;
+  background-color: #BCBDC9;
 }
 
 .back-color-lightergray {
-  background-color: #EAEAEB;
+  background-color: #E5E5F0;
 }
 
 .back-color-red-grad {
@@ -91,20 +135,20 @@
 }
 
 .back-color-purple-grad {
-  background-image: radial-gradient(circle, #7D64D1 0%, #5235b3 100%);
+  background-image: radial-gradient(circle, #6677CC 0%, #394dac 100%);
 }
 
 .back-color-purple-grad:hover {
-  background-image: radial-gradient(circle, #bfb3e8 0%, #8d78d7 100%);
+  background-image: radial-gradient(circle, #b3bbe6 0%, #7988d2 100%);
 }
 
 .back-color-primary-hover {
-  background-color: #3cd7a6;
+  background-color: #48f352;
   border-top: 1px solid white;
 }
 
 .back-color-primary-hover:hover {
-  background-color: #2bce9b;
+  background-color: #30f23c;
 }
 
 .font-futura {
@@ -116,13 +160,14 @@ h1,
 h2,
 h3,
 h5 {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
+  text-transform: uppercase;
 }
 
 p {
-  font-family: "Nunito", serif, "Arial";
+  font-family: "CircularStd", serif;
   font-size: 1em;
-  color: #1F1D26;
+  color: #272A38;
 }
 
 hr {
@@ -161,7 +206,7 @@ hr {
 }
 
 .tournament-overview-container span {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
 }
 
 .card .card-body {
@@ -178,18 +223,18 @@ hr {
 }
 
 .font-primary-700b {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   font-weight: 700;
 }
 
 .font-primary-700bi {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   font-weight: 700;
   font-style: italic;
 }
 
 .font-primary-900 {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   font-weight: 900;
 }
 
@@ -275,7 +320,7 @@ hr {
 }
 
 .carousel-item h5 {
-  font: "Roboto Condensed", "Nunito", sans-serif;
+  font: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   font-size: 22px;
 }
 
@@ -310,12 +355,12 @@ hr {
 }
 
 .carousel-caption h1 {
-  font-family: "Roboto Condensed";
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   font-size: 50px;
 }
 
 body {
-  font-family: "Nunito", serif, "Arial";
+  font-family: "CircularStd", serif;
   line-height: 1.618;
   /* Output the numbers using the counter() function, but use a custom color, and position the numbers how we want */
 }
@@ -327,7 +372,7 @@ body .dgl-ol li {
 }
 
 body .dgl-ol li:before {
-  color: #51DBB0;
+  color: #60F569;
   content: counter(list) ".";
   left: -32px;
   position: absolute;
@@ -336,18 +381,18 @@ body .dgl-ol li:before {
 }
 
 body .tag {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   font-weight: 700;
   padding: 0px 2px;
 }
 
 body .tag:hover {
-  background-color: #7D64D1;
+  background-color: #6677CC;
 }
 
 body .video-thumbnail-link {
   text-decoration: none;
-  color: #1F1D26;
+  color: #272A38;
 }
 
 body .video-thumbnail-link .video-thumbnail {
@@ -384,13 +429,13 @@ body .video-thumbnail-link .video-thumbnail .middle {
 
 body .video-thumbnail-link .video-thumbnail .icon-container {
   background-color: transparent;
-  color: #7D64D1;
+  color: #6677CC;
   font-size: 50px;
   padding: 16px 32px;
 }
 
 body .video-thumbnail-link:hover {
-  color: #7D64D1;
+  color: #6677CC;
 }
 
 body .video-thumbnail-link:hover img {
@@ -418,16 +463,16 @@ body .video-thumbnail-link:hover .middle {
 }
 
 body .table th {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   text-transform: uppercase;
 }
 
 body .fixture-table-primary {
-  border: 1px solid #51DBB0;
+  border: 1px solid #60F569;
 }
 
 body .fixture-table-purple {
-  border: 1px solid #7D64D1;
+  border: 1px solid #6677CC;
 }
 
 body .pagination {
@@ -436,7 +481,7 @@ body .pagination {
 }
 
 body .pagination li {
-  background-color: #B6B9BD;
+  background-color: #BCBDC9;
   display: block;
   margin-left: 2px;
   margin-right: 2px;
@@ -447,7 +492,7 @@ body .pagination li {
 
 body .pagination li span,
 body .pagination li a {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   -webkit-transform: skewX(40deg);
           transform: skewX(40deg);
   display: block;
@@ -474,11 +519,11 @@ body .pagination li:first-child,
 body .pagination li:last-child {
   margin-left: 10px;
   margin-right: 10px;
-  background-color: #7D64D1;
+  background-color: #6677CC;
 }
 
 body .pagination li.active {
-  background-color: #FF697D;
+  background-color: #6FCDDE;
 }
 
 body .pagination li.active span {
@@ -490,50 +535,50 @@ body .pagination li.disabled {
 }
 
 body .list-group-item-primary {
-  background-color: #51DBB0 !important;
-  color: #2B2B2A !important;
+  background-color: #60F569 !important;
+  color: #1E1F24 !important;
 }
 
 body .list-group-item-gray {
   background-color: #454545 !important;
-  color: #51DBB0 !important;
+  color: #60F569 !important;
 }
 
 body .list-group-settings a {
-  color: #7D64D1;
+  color: #6677CC;
   background-color: #FFF;
 }
 
 body .list-group-settings a.active {
   color: #FFF;
   background-color: #6FCDDE;
-  border-color: #7D64D1;
+  border-color: #6677CC;
 }
 
 body #alertBannerTop {
-  background-color: #51DBB0;
+  background-color: #60F569;
 }
 
 body #moreButton {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
-  color: #7D64D1;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
+  color: #6677CC;
   font-size: 1.4em;
   font-weight: 700;
 }
 
 body #moreButton:hover {
-  color: #51DBB0;
+  color: #6FCDDE;
   text-decoration: none;
 }
 
 body .team-logo-300-gray {
   width: 100%;
-  background-color: #B6B9BD;
+  background-color: #BCBDC9;
 }
 
 body .team-logo-300 {
   width: 100%;
-  background-color: #574986;
+  background-color: #4d5580;
 }
 
 body .team-logo-300-trans {
@@ -566,17 +611,17 @@ body .team-registration input {
 
 body .team-registration input:focus {
   background-color: #6FCDDE;
-  border-color: #7D64D1;
-  color: #1F1D26;
+  border-color: #6677CC;
+  color: #272A38;
 }
 
 body .team-registration .list-group-item {
   background-color: transparent;
-  border-color: #51DBB0;
+  border-color: #60F569;
 }
 
 body .team-registration .checkbox {
-  color: #51DBB0;
+  color: #60F569;
 }
 
 body .btn-outline-dgl {
@@ -614,16 +659,16 @@ body .btn-dgl-contaianer-purple {
   display: inline-block;
   -webkit-transform: skewX(-10deg);
           transform: skewX(-10deg);
-  border: 3px solid #7D64D1;
+  border: 3px solid #6677CC;
 }
 
 body .btn-dgl-contaianer-purple .btn-dgl {
-  color: #7D64D1 !important;
+  color: #6677CC !important;
 }
 
 body .btn-dgl-contaianer-purple:hover {
-  background-color: #7D64D1;
-  border-color: #7D64D1;
+  background-color: #6677CC;
+  border-color: #6677CC;
 }
 
 body .btn-dgl-contaianer-purple:hover .btn-dgl {
@@ -648,20 +693,20 @@ body .btn-dgl-container-gray .btn-dgl {
 }
 
 body .btn-dgl-container-primary {
-  border: 3px solid #51DBB0;
+  border: 3px solid #60F569;
 }
 
 body .btn-dgl-container-primary .btn-dgl {
-  color: #51DBB0 !important;
+  color: #60F569 !important;
 }
 
 body .btn-dgl-container-primary:hover {
-  border: 3px solid #51DBB0;
-  background-color: #51DBB0;
+  border: 3px solid #60F569;
+  background-color: #60F569;
 }
 
 body .btn-dgl-container-primary:hover .btn-dgl {
-  color: #FFF !important;
+  color: #6677CC !important;
 }
 
 body .btn-dgl {
@@ -669,7 +714,7 @@ body .btn-dgl {
   border-width: 0;
   -webkit-transform: skewX(10deg);
           transform: skewX(10deg);
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   font-weight: bold;
 }
 
@@ -684,11 +729,11 @@ body .btn-dgl:focus {
 
 body .btn-dgl:active {
   color: #fff;
-  background-color: #2fe9af;
+  background-color: #42ff4d;
 }
 
 body .sidebar-header {
-  background-color: #7D64D1;
+  background-color: #6677CC;
   -webkit-transform: skewX(-15deg);
           transform: skewX(-15deg);
 }
@@ -704,12 +749,16 @@ body .nav .nav-link {
   color: #FFF;
 }
 
+body .nav .nav-link:hover {
+  color: #60F569;
+}
+
 body .nav .disabled {
   text-decoration: line-through;
 }
 
 body .nav-container {
-  background-color: #7D64D1;
+  background-color: #6677CC;
   position: relative;
   top: -40px;
   z-index: 1;
@@ -721,18 +770,18 @@ body .navbar {
 }
 
 body .navbar .dropdown-item:hover {
-  background-color: #6FCDDE;
+  background-color: #FF697D;
   color: #FFF;
 }
 
 body .nav-brand a {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   font-weight: 900;
   vertical-align: baseline;
 }
 
 body .navbar-dgl {
-  background-color: #2B2B2A !important;
+  background-color: #1E1F24 !important;
 }
 
 body .navbar-dgl .navbar-brand {
@@ -744,30 +793,30 @@ body .navbar-dgl .navbar-toggler-icon {
 }
 
 body .navbar-dgl .navbar-text {
-  font-family: "Roboto Condensed", "Nunito", sans-serif !important;
-  font-size: 1.1em;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif !important;
+  font-size: 1.2em;
 }
 
 body .navbar-dgl a {
   color: #FFF;
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
-  font-weight: 700;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   text-transform: uppercase;
   text-decoration: none;
 }
 
 body .navbar-dgl a.nav-link {
   border-bottom: 5px solid transparent;
+  font-size: 1.1em;
 }
 
 body .navbar-dgl a.nav-link:hover {
-  color: #51DBB0;
+  color: #6FCDDE;
 }
 
 body .navbar-dgl button {
   color: #FFF;
-  border-color: #B6B9BD !important;
-  background-color: #7D64D1;
+  border-color: #BCBDC9 !important;
+  background-color: #6677CC;
   margin-left: 2vw;
 }
 
@@ -777,16 +826,16 @@ body .navbar-dgl li a {
 }
 
 body .jumbotron-fluid h1 {
-  color: #7D64D1;
+  color: #6677CC;
   text-transform: uppercase;
 }
 
 body .jumbotron-fluid p {
-  color: #B6B9BD;
+  color: #BCBDC9;
 }
 
 body .top-banner {
-  background-color: #51DBB0;
+  background-color: #60F569;
   padding: 10px 0;
   color: #FFF;
   font-weight: 700;
@@ -803,7 +852,7 @@ body .banner-row .banner-row-background {
 }
 
 body .banner-row h1 {
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   font-weight: 700;
   font-size: 3rem;
   z-index: 2;
@@ -845,7 +894,7 @@ body .dgl-card-img {
 }
 
 body .main {
-  background-color: #EAEAEB;
+  background-color: #FFF;
 }
 
 body .post-body {
@@ -867,32 +916,28 @@ body .post-body-hover:hover {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background-color: #FFF;
-  border: 1px solid #7D64D1;
+  border: 1px solid #6677CC;
   cursor: pointer;
 }
 
-body .post-body-hover:hover p {
-  color: #5c3dc5;
-}
-
 body .post-body-hover:hover .post-title {
-  color: #7D64D1;
+  color: #6677CC;
 }
 
 body .footer {
-  background-color: #2B2B2A;
+  background-color: #1E1F24;
   padding-top: 2em;
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
 }
 
 body .footer h5 {
-  font-family: "Nunito", serif, "Arial";
+  font-family: "CircularStd", serif;
   font-size: 1rem;
 }
 
 body .footer a {
   color: #454545;
-  font-family: "Roboto Condensed", "Nunito", sans-serif;
+  font-family: "DINNext", "Titillium Web", "DINOT Cond Black", serif;
   text-decoration: none;
 }
 
@@ -909,7 +954,7 @@ body .footer .footer-text .footer-list-div {
 }
 
 body .footer p {
-  font-family: "Nunito", serif, "Arial";
+  font-family: "CircularStd", serif;
 }
 
 body #footerFlexContainer {
