--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,10 +1,10 @@
-//@font-face {
-//  font-family: 'FuturaMedium';
-//  src: url('/fonts/FuturaPT-Medium.otf');
-//  //src: url('/fonts/ParaType-FuturaPTMedium.otf');
-//  font-weight: normal;
-//  font-style: normal;
-//}
+@font-face {
+  font-family: 'FuturaMedium';
+  src: url('/fonts/FuturaPT-Medium.otf');
+  //src: url('/fonts/ParaType-FuturaPTMedium.otf');
+  font-weight: normal;
+  font-style: normal;
+}
 //
 @font-face {
   font-family: 'DINNext';
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: 'CircularStd';
-  src : url('/fonts/CircularStd-BookIalic.otf');
+  src : url('/fonts/CircularStd-BookItalic.otf');
   font-weight: normal;
   font-style: italic;
 }
