--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'FuturaMedium';
-  src: url('/fonts/FuturaPT-Medium.otf');
+  src: url('/fonts/FuturaLT-Bold.ttf');
   //src: url('/fonts/ParaType-FuturaPTMedium.otf');
   font-weight: normal;
   font-style: normal;
